--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/icono-sbs-web-369x369.png" alt="Mobirise" title="" style="height: 6.2rem;">
+                        <img src="assets/images/icono-sbs-web-369x369.png" alt="Mobirise" title="" style="height: 7.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">
                         Diseño y Producción</a></span>
             </div>
         </div>
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="cid-qJlugTMaqO" id="image2-b">
+<section class="engine"><a href="https://mobirise.ws/e">best website design software</a></section><section class="cid-qJlugTMaqO" id="image2-b">
 
     
 
@@ -95,9 +95,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    Contacto</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><strong>
+                    Contacto</strong></h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     Si quires información no dudes en escribirnos, te atenderemos en el menor tiempo posible.</h3>
             </div>
         </div>
@@ -109,7 +109,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nVybX09VgPW6wYqCG7L6t8tNWu9KLGcb7YLnEbaqhxH7gPVdYfMkg5CkKJQBCDgexVWyebTZMETzQ90avGWc4OxH5aoPgFWcPFmgXuZ0JAc8OTJ5bzi89ZD7S9Xt3v+Z" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LFQuw6h98gKBw0K4k3Z/2AH8jSi2PrgDc/AiQPencYxOvNUBgI1PsjLcLwk7Qxruk64YKklv/AqBeaT878dljxkdYJE+/jF5BR0R0+AfWfvJcYwlXnsp4lTQa5P36jP1" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -152,7 +152,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
-                <h2 class="pb-3 mbr-fonts-style display-1">¡Siguenos!</h2>
+                <h2 class="pb-3 mbr-fonts-style display-5">¡Siguenos!</h2>
                 <div class="social-list pl-0 mb-0">
                     <a href="https://www.instagram.com/sbs_dyp/?hl=es" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
