create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="cid-r8ym6kqMTa" id="image2-1">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-r8ym6kqMTa" id="image2-1">
 
     
 
@@ -125,7 +125,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GPHxjCNfWJpZoqD9zmJnHG/YLO3Ja3vxi9ST2pNy0AlkD5c1JRuEktBaJMjEOR9d36j/QOQGB1qgwxj+Qnl0h2pE/xLxlhZA80PSPlfl4HnnXEqqDvTX6yeWknhaPdgS">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wDmN/B9ndrlLM7CMVRt799yN+ilTGS+RjMkhPsf48BtazMnb42KA6AgY0B7GDn4x1jpOKNFD4EBcUciBzLUm9rjpTr5plKVvBS0pySmmBOLjdOf03k/hoCiQlHxQVLFB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
