create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-rjzYlwW0Oj mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-rjzYlwW0Oj mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -104,7 +104,7 @@
                 <div class="inst">
                     <h1 class="inst__title align-center mbr-fonts-style display-2">Instagram</h1>
                     <div class="inst__content"></div>
-                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
+                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#" data-max-id="1692337943900848116_6918242667">Ver más</a></div>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">
                     Contacta con nosotros</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-4">
-                    Pidenos información y en el menor tiempo posible te atenderemos</h3>
+                    Pídenos información y en el menor tiempo posible te atenderemos</h3>
             </div>
         </div>
     </div>
@@ -131,7 +131,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias por contactar con nosotros, en el menor tiempo posible le atenderemos.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uvfQvA18x3l/77yGwj+4q8JRGwvrjQPJLQXJoaGZYvI8RBmVxqiE7AJtyv2XWlzpsP3Voo+lIiWvw1xa6T1cDZgXbVSWZRTP+hmBxCVNlnBBJxzqBjRJUbUvF/0gf02E">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ir+5eubF2g7sDgIH0tgVS20ymuI6j4tKIXVObMnj2S9hQY3ElChwRkBinBaaJoRx+n1Gu0RPDa0T+fj9GRlW8kI5YRpCST9mHjPal8nEchJyEZssr1uR411p/2t2hWi6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
